# bro_amqp_plugin

./: CHANGES  CMakeLists.txt  README.md
cmake/: Findamqpcpp.cmake
scripts/: init.bro
src/: Plugin.cc  Plugin.h  amqp.bif  amqp.cc  amqp.h  message_bus.cc  message_bus.h
tests/: btest.cfg
tests/amqp/: show-plugin.bro  test_plugin.bro
